# Zyntalic_idiom

./: .coverage  .gitignore  BACKLOG.md  CHANGELOG.md  DATASET.md  EMBEDDINGS.md  QUICK_FIX_GUIDE.md  README.md  check_port.py  check_status.py  kill_and_restart.py  package-lock.json  pyproject.toml  run_data_pipeline.sh  run_desktop.bat  run_desktop.py  start_server.bat  start_server.sh  test_api.py  translate_and_export.py  verify_alphabet.py  zyntalic_export.txt
.github/workflows/: ci.yml
apps/web/: app.py
data/fixtures/: golden_core_hashes.json  golden_prompts.json
data_generation/: batch_translate.py  build_dictionary.py  check_sources.py  clean_text.py  collect_annas.py  collect_gutenberg.py  extract_text.py  sentence_split.py
data_generation/clean/: pg1661.txt
data_generation/sentences/: sentences.jsonl
evals/: test_smoke.py
scripts/: admin_cli.py  check_status.py  generate_embeddings.py  kill_and_restart.py  run_desktop.py  setup_lexicon_smart.py  start_server.bat  start_server.sh  train_projection.py
tests/: test_determinism.py  test_generator_stages.py  test_mirror_rules.py  test_nlp_backend.py  test_pdf_cleaning.py  test_quality_gate_golden.py  test_sidecar_ir.py  test_surface_rules.py  test_syntax_parse.py  test_translator_batch.py
unittests/: test_api.py  test_api_connection.py  test_translations.py
zyntalic/: __init__.py  advanced_features.py  bifurcation_scanner.py  chiasmus.py  cli.py  core.py  documentation.py  embeddings.py  enhanced_syntax.py  ir.py  lexicon_manager.py  logging_utils.py  morphology.py  nlp.py  phonology.py  reverse.py  semantic_coherence.py  syntax.py  test_suite.py  transformers.py  translator.py
zyntalic-flow/: App.tsx  package-lock.json  types.ts
zyntalic/utils/: cache.py  (+1 more)
(+14 files in other folders)
