[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zyntalic"
version = "0.2.0"
description = "Deterministic synthetic-language toolkit (Zyntalic) with anchor priors and S-O-V-C surface order"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "zolton" }]
keywords = ["synthetic-language", "conlang", "translation", "schelling-points", "deterministic"]
dependencies = [
  "numpy>=1.24.0",
]

[project.scripts]
zyntalic = "zyntalic.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "pytest-cov>=5.0.0", "hypothesis>=6.100.0", "coverage>=7.5.0"]
web = ["fastapi>=0.110.0", "uvicorn[standard]>=0.29.0", "pydantic>=2.0.0", "python-multipart>=0.0.9"]
embeddings = ["sentence-transformers>=2.6.0"]
embeddings-bge = ["sentence-transformers>=2.6.0"]
pdf = ["PyPDF2>=3.0.0"]
desktop = ["pywebview>=4.4.1"]
data = ["requests>=2.31.0", "beautifulsoup4>=4.12.0", "tqdm>=4.66.0"]
nlp = ["spacy>=3.7.0", "typer>=0.9.0", "click>=8.1.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["zyntalic*"]

[tool.setuptools.package-data]
zyntalic = ["resources/lexicon/*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["evals", "tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-q"]

[tool.coverage.run]
branch = true
source = ["zyntalic"]
omit = ["tests/*", "evals/*", "scripts/*", "data_generation/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
